# Automated-Planning

PDDL_TOOL/ECN_CORO-ERTS_20-21_APLA-Practical_GUILLEMOT-MUDALIAR-main/: CMakeLists.txt  README.md  main.cpp  parser.cpp  parser.hpp  solver.cpp  solver.hpp
PDDL_TOOL/ECN_CORO-ERTS_20-21_APLA-Practical_GUILLEMOT-MUDALIAR-main/PDDL_FILES/: agricola.pddl  p01.pddl  p_01.pddl  path1.txt  path2.txt
PDDL_TOOL/ECN_CORO-ERTS_20-21_APLA-Practical_GUILLEMOT-MUDALIAR-main/PDDL_FILES/BLOCKS/: domain.pddl  p01.pddl
PDDL_TOOL/ECN_CORO-ERTS_20-21_APLA-Practical_GUILLEMOT-MUDALIAR-main/PDDL_FILES/blocksworld/: blocksworld.pddl
PDDL_TOOL/ECN_CORO-ERTS_20-21_APLA-Practical_GUILLEMOT-MUDALIAR-main/PDDL_FILES/snake/: domain.pddl  p010.pddl
PDDL_TOOL/ECN_CORO-ERTS_20-21_APLA-Practical_GUILLEMOT-MUDALIAR-main/data_structures/: CMakeLists.txt  Makefile  cmake_install.cmake  kdt.hpp  tuple.hpp
PDDL_TOOL/ECN_CORO-ERTS_20-21_APLA-Practical_GUILLEMOT-MUDALIAR-main/documentation/examples/action_costs/: main.cpp
PDDL_TOOL/ECN_CORO-ERTS_20-21_APLA-Practical_GUILLEMOT-MUDALIAR-main/documentation/examples/conditional_effects/: main.cpp
PDDL_TOOL/ECN_CORO-ERTS_20-21_APLA-Practical_GUILLEMOT-MUDALIAR-main/documentation/examples/delete_relaxation/: main.cpp
PDDL_TOOL/ECN_CORO-ERTS_20-21_APLA-Practical_GUILLEMOT-MUDALIAR-main/documentation/examples/grounding/: main.cpp
PDDL_TOOL/ECN_CORO-ERTS_20-21_APLA-Practical_GUILLEMOT-MUDALIAR-main/planning_problem/: action.cpp  action.hpp  domain.cpp  domain.hpp  problem.cpp  problem.hpp  state.cpp  state.hpp
(+1 files in other folders)
